--- a/public/main.css
+++ b/public/main.css
@@ -2,6 +2,12 @@ body {
   background-color: snow;
 }
 
+#headertwo {
+  background-color: gold;
+  margin: 0;
+  height: 75px;
+}
+
 #navbar {
   display: flex;
   justify-content: space-around;
@@ -86,6 +92,46 @@ body {
 }
 
 img {
-  width: 15em;
-  height: 15em;
+  width: auto;
+  height: 8em;
+}
+
+#itemContainer {
+  display: flex;
+  justify-content: space-around;
+  padding: 0;
+  border: 2px solid red;
+}
+
+.container {
+  border: 2px solid green;
+}
+
+#itemblock {
+  border: 1px solid rgba(0,0,0,0.1);
+  box-shadow:
+    inset 0 2px 3px rgba(255,255,255,0.3),
+    inset 0 -2px 3px rgba(0,0,0,0.3),
+    0 1px 1px rgba(255,255,255,0.9);
+  margin: 10px;
+  padding: 1em;
+  width: 25em;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#itemTitle {
+  font-size: 2em;
+}
+
+#itemDesc {
+  margin-left: .7em;
+}
+
+#itemPrice {
+  margin-bottom: -.5em;
 }
