--- a/public/main.css
+++ b/public/main.css
@@ -2,6 +2,13 @@ body {
   background-color: snow;
 }
 
+form {
+  background: #12121212;
+  box-sizing: border-box;
+  padding: 2%;
+  box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+}
+
 #headertwo {
   background-color: gold;
   margin: 0;
@@ -63,7 +70,7 @@ body {
   margin-left: 5em;
 }
 
-#updatebtn {
+#updatebtn, #closeModal {
   margin-top: 2em;
   width: 100%;
 }
@@ -110,9 +117,9 @@ img {
 #itemblock {
   border: 1px solid rgba(0,0,0,0.1);
   box-shadow:
-    inset 0 2px 3px rgba(255,255,255,0.3),
-    inset 0 -2px 3px rgba(0,0,0,0.3),
-    0 1px 1px rgba(255,255,255,0.9);
+  inset 0 2px 3px rgba(255,255,255,0.3),
+  inset 0 -2px 3px rgba(0,0,0,0.3),
+  0 1px 1px rgba(255,255,255,0.9);
   margin: 10px;
   padding: 1em;
   width: 25em;
