--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,9 @@
 body {
   background-color: snow;
+  background-image: url("https://i.pinimg.com/originals/19/d2/94/19d294b86b157c57856ecd786461b8d2.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
 
 form {
@@ -15,29 +19,24 @@ form {
   height: 75px;
 }
 
-#navbar {
-  display: flex;
-  justify-content: space-around;
-  background-color: cadetblue;
-  height: 2em;
+.nav-wrapper {
+  height: 15em;
 }
 
-#navbar a {
-  font-size: 15px;
-  color: black;
-  align-self: center;
+.nav-wrapper a {
+  font-size: 32px;
+  color: whitesmoke;
   text-decoration: none;
   font-family: helvetica;
 }
 
 #modal {
 	background-color: rgba(0,0,0,0.4);
-	position: fixed;
 	top: 0;
 	left: 0;
 	height: 100%;
 	width: 100%;
-	z-index: 1;
+	z-index: 2;
 	overflow: auto;
   display: none;
 }
@@ -98,16 +97,25 @@ form {
   background: linear-gradient(180deg, rgba(22,208,53,1) 0%, rgba(37,238,67,1) 17%, rgba(37,238,67,1) 50%, rgba(0,102,8,1) 100%);
 }
 
-img {
+.logo {
   width: auto;
-  height: 8em;
+  height: 4em;
+}
+
+.itemImg {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 #itemContainer {
   display: flex;
   justify-content: space-around;
   padding: 0;
-  border: 2px solid red;
 }
 
 .container {
@@ -115,12 +123,13 @@ img {
 }
 
 #itemblock {
+  background: whitesmoke;
   border: 1px solid rgba(0,0,0,0.1);
   box-shadow:
   inset 0 2px 3px rgba(255,255,255,0.3),
   inset 0 -2px 3px rgba(0,0,0,0.3),
   0 1px 1px rgba(255,255,255,0.9);
-  margin: 10px;
+  margin: 1em;
   padding: 1em;
   width: 25em;
 }
@@ -129,6 +138,7 @@ ul {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 #itemTitle {
