--- a/public/main.css
+++ b/public/main.css
@@ -109,13 +109,14 @@ form {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  height: 500px;
+  width: auto;
 }
 
 #itemContainer {
   display: flex;
   justify-content: space-around;
-  padding: 0;
+  margin-top: 2em;
 }
 
 .container {
