--- a/public/main.css
+++ b/public/main.css
@@ -13,12 +13,6 @@ form {
   box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
 }
 
-#headertwo {
-  background-color: gold;
-  margin: 0;
-  height: 75px;
-}
-
 .nav-wrapper {
   height: 15em;
 }
@@ -115,6 +109,7 @@ form {
 #itemContainer {
   display: flex;
   justify-content: space-around;
+  margin-top: 3em;
   padding: 0;
 }
 
@@ -123,14 +118,14 @@ form {
 }
 
 #itemblock {
-  background: whitesmoke;
+  background: rgba(255,255,255,0.9);
   border: 1px solid rgba(0,0,0,0.1);
   box-shadow:
   inset 0 2px 3px rgba(255,255,255,0.3),
   inset 0 -2px 3px rgba(0,0,0,0.3),
   0 1px 1px rgba(255,255,255,0.9);
-  margin: 1em;
-  padding: 1em;
+  margin: .5em;
+  padding: .5em 1em 1em 1em;
   width: 25em;
 }
 
