--- a/public/main.css
+++ b/public/main.css
@@ -7,6 +7,22 @@ body {
   background-size: cover;
 }
 
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url(photos/2452.jpg) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 form {
   background: #12121212;
   box-sizing: border-box;
