--- a/public/main.css
+++ b/public/main.css
@@ -122,10 +122,7 @@ button {
   display: flex;
   justify-content: space-around;
   margin-top: 2em;
-}
-
-.container {
-  border: 2px solid green;
+  margin-bottom: 2em;
 }
 
 #itemblock {
@@ -162,10 +159,4 @@ ul {
 
 #itemLoc {
   font-size: 20px;
-}
-
-@media only screen and (max-width: 600px) {
-  body {
-    background-color: lightblue;
-  }
 }
