--- a/public/main.css
+++ b/public/main.css
@@ -128,7 +128,7 @@ button {
 }
 
 #itemblock {
-  background: rgba(255,255,255,0.9);
+  background: rgba(255,255,255,0.7);
   border: 1px solid rgba(0,0,0,0.1);
   box-shadow:
   inset 0 2px 3px rgba(255,255,255,0.3),
@@ -156,4 +156,18 @@ ul {
 
 #itemPrice {
   margin-bottom: -.5em;
+}
+
+.editForm {
+  background-color: rgba(255,255,255,1)
+}
+
+#gifdiv {
+  display: flex;
+  justify-content: center;
+  margin: 3.5em auto 2em auto;
+}
+
+#gif {
+  border: 10px solid rgba(100,0,213,0.6);
 }
